--- a/color flipper/index.html
+++ b/color flipper/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Color Flipper</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
-</head>
-<body>
-    <h3>Colour Flipper</h3>
-    <button id="green" onclick="setColor('green')">Green</button>
-    <button id="red" onclick="setColor('red')">Red </button>
+  </head>
+  <body>
+    <h3>Color Flipper</h3>
+    <button id="red" onclick="setColor('red')">Red</button>
     <button id="blue" onclick="setColor('blue')">Blue</button>
+    <button id="green" onclick="setColor('green')">Green</button>
     <button onclick="randomColor()">Random</button>
-</body>
+  </body>
 </html>
